# GLEngineCMake

./: CMakeLists.txt  CMakeSettings.json  build.bat  fbuild-msvc.bff  fbuild.bff  fbuild.windows.fdb  rebuild.bat
Code/Apps/GLApp/: CMakeLists.txt
Code/Apps/GLApp/Private/: main.cpp
Code/Engine/Core/: CMakeLists.txt
Code/Engine/Core/Private/: Bar.cpp  Core.cpp
Code/Engine/Core/Public/Core/: Bar.h  Core.h
Code/Engine/GLApi/: CMakeLists.txt
Code/Engine/Graphics/: CMakeLists.txt
Code/Engine/Graphics/GraphicsAPIs/OpenGL/: CMakeLists.txt
Code/Engine/Graphics/GraphicsAPIs/OpenGL/Public/OpenGL/: GLApi.h
Code/Engine/Graphics/Private/: Graphics.cpp  Graphics.h
Code/Engine/Graphics/Public/Graphics/: IGraphics.h
Dependencies/SDL2.0.1/: CMakeLists.txt
Tools/: CMakeLists.txt
Tools/CMake/: Common.cmake  FASTBuild.cmake
